--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
       <div class="p-10" ;></div>
       <div>
-        <img src="IMG_9285.JPG" alt="Thats me, hold up!" class="rounded-circle img-thumbnail "
+        <img src="IMG_9285.jpg" alt="Thats me, hold up!" class="rounded-circle img-thumbnail "
           style="margin-top: -6rem; margin-left: 40px; width: 180px; height: 180px; background-color: #e93461; border: none;">
       </div>
       
